--- a/index.html
+++ b/index.html
@@ -475,5 +475,18 @@ $(document).ready(function () {
         translate_i18n_duration_short();
         })
         </script>
+
+<script type="text/javascript">
+alert("The server will be ready soon!");
+</script>
+
+<script type="text/javascript">
+  window.onbeforeunload = confirmExit;
+  function confirmExit()
+  {
+    return "Confirm Exit? ";
+  }
+</script>
+
         </body>
         </html>
