--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-Leak studio will be closed forever. Thank you for your supports. Thank you for those years! 💟
+Leak studio will be closed forever.
+<br><br>
+Thank you for your supports.
 <br>
+Thank you for those years! 💟
+<br><br><br>
 01 March 2019- 10 September 2020
  
