--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
-Leak studio will be closed forever.
-Thank you for your supports.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Example of Auto Loading Bootstrap Modal on Page Load</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
+	$(document).ready(function(){
+		$("#myModal").modal('show');
+	});
+</script>
+</head>
+<body>
+<div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Leak studio will be closed forever</h4>
+            </div>
+            <div class="modal-body">
+			   
+
+
+Thank you for your Love and supports. 
 Thank you for those years! 💟
 <br><br>
-01 March 2019- 10 September 2020
- 
+01 March 2019 - 10 September 2020
+
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
