--- a/index.html
+++ b/index.html
@@ -358,65 +358,37 @@ Follow me in Facebook: <strong>fb/leakstudio</strong>
 
 
 
-
-
 <div class="apps"> <div class="container"> <div class="flex"><div class="content-area-app"></div>
   
-<div class="slide"> <a href="nayems-mod-ms.html" class="item"> <img src="https://www.androidp1.com/uploads/posts/2020-06/1592061279_minecraft-pocket-edition.webp" alt="Minecraft"> <div class="name">Minecraft Latest</div> <div class="developer">Mojang</div> </a></div>
+ <div class="slide"> <a href="ff-topup.html" class="item"> <img src="https://cdn1.codashop.com/S/content/mobile/images/product-tiles/freefire_tile_in.jpg" alt="Freefire"> <div class="name">Freefire</div> <div class="developer">Garena</div> </a></div>
   
-<div class="slide"> <a href="download-stick.html" class="item"> <img src="https://an1.com/uploads/angretftgretwterwer.jpg" alt="Anger of Stick"> <div class="name">Anger of Stick 5: Zombie (MOD, Unlimited Money)</div> <div class="developer">J-PARK</div> </a></div>
+<div class="slide"> <a href="#" class="item"> <img src="https://cdn1.codashop.com/S/content/mobile/images/product-tiles/pubgm_rps_tile.jpg" alt="pubgm"> <div class="name">PUBG Mobile</div> <div class="developer">Tencent</div> </a></div>
+  
+ <div class="slide"> <a href="#" class="item"> <img src="https://cdn1.codashop.com/S/content/mobile/images/product-tiles/mlbb_tile.jpg" alt="mobile legends"> <div class="name">Mobile Legends</div> <div class="developer">Moonton</div> </a></div>
  
-<div class="slide"> <a href="download-zombie.html" class="item"> <img src="https://an1.com/uploads/zombiewrwiterwtert.png" alt="Download Zombie Hunter Sniper: Apocalypse (MOD, Unlimited Money) free on android"> <div class="name">Download Zombie Hunter Sniper: Apocalypse (MOD, Unlimited Money) free on android</div> <div class="developer">Genera Games</div> </a></div>
+ <div class="slide"> <a href="#" class="item"> <img src="https://cdn1.codashop.com/S/content/mobile/images/product-tiles/lordsmobile_tile.jpeg" alt="mobile legends"> <div class="name">Mobile Legends</div> <div class="developer">IGG.COM</div> </a></div>
+ 
+
 
 </div></div></div>
 
 
 
 
-
+<br><br><br>
+     <div class="content" id="download">
+     <div class="content content-box content-boxed content-gradient round-small shadow-large">
+     <center>
+   <sup>
+     <a href="mailto:goldrush4201@gmail.com">   <i class="fa fa-headphones"></i> customer service</a> 
+     <br>2020 © Nayem Corporation LTD. 
+     </sup>
+     </center></div></div>
 
 <br><br><br><br>
 
 
-<script type="text/javascript">
-$(document).ready(function () {
-    populate_fave_menu();
-});
-</script><script>
-    $(document).ready(function () {
-        initApp(1597632494)
-    })
-</script>
 
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/handlebars.min-v4.7.6.js?t=678b80bc6e04c42ecd0a177aa639b36965237745"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/store.everything.min.js?t=08c021fcf7e12344f7fb125b0c41173ae556a01f"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/sort_properties.js?t=7eb1e156ca001b828567d07dd2491d6799653342"></script>
-<script data-cfasync="false" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/html2canvas/html2canvas.min.js?t=eb6f78328797ef56876ba0419c6d85ef69a3acf9"></script>
-<script data-cfasync="false" src="https://cdn.jsdelivr.net/npm/moment@2.20.1/moment.min.js"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/chartjs/chartjs-plugin-stacked100-hojsim.js?t=5a5ae796b6dba06ca6d5f14956187a711aa0464d"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/isotope.pkgd.min.js?t=3cb37f0004158f3e8f9194ebdb1d361dce6f0ed0"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/jquery.address-1.6.min.js?t=8e5c112b2cf71cb81302a5bf55f8fb11c904cb9b"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/qrcode/jquery.qrcode.min.js?t=f424bd339870510d1160d1c5da5d698aedbb452e"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/ads.js?t=1466773bbb9f92f1743122abbe52d4199acb741f"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/adblock/adblockDetector.js?t=18e1b27bffdb2a4d677c19a61d4d656afe726a95"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/storage/player_storage.js?t=1bb8b364c031da277dd232031246df7d59c89689"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/app.js?t=2451ee36b358d691f9b17b69f6701241f9896d22"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/semantic_api.js?t=7ec2a33f96bf073523ad98cb091e7866dc2fe89a"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/ga_events.js?t=8698191b58df81b5b485067bdfee28a09fd97703"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/storage/fave_menu.js?t=47684fc0cc7ad217c10fe5b759616000f6504f65"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/jslib/jquery.kinetic/jquery.kinetic.min.js?t=8497517a4b60e9ed107f575489c6523db351c9ff"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/charts/chart_colors_matchup.js?t=d4d3469feaefabd49ddf27a6c0a640cf7e1970e6"></script>
-<script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/charts/win_stats_barchart.js?t=7c075d3f4c7b4258c72232dc18fb3bf10b7bec6c"></script>
-<script type="text/javascript">
-$(document).ready(function () {
-    populate_fave_menu();
-});
-</script><script>
-    $(document).ready(function () {
-        initApp(1597632494)
-    })
-</script>
 <script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/js/home.js?t=7c0732f98e1fe72c3f52a9a79d4c273f3630e18f"></script>
 <script data-cfasync="false" type="text/javascript" src="https://cdn.royaleapi.com/static/lib/flickity/flickity.pkgd.min.js?t=fff8d6dd8d878058bc14850c11c8dd9d43a2c8aa"></script>
 <script>
