--- a/diamond-100.html
+++ b/diamond-100.html
@@ -33,7 +33,7 @@
         <h4 style="padding:0.5em;">Player Information</h4>
         
         <div class="list">
-        <form action="ls-payment-on-way.html" method="post">
+        <form action="ls-payment-load.html" method="post">
         
           <label class="item item-input">
             <i class="ion-ios7-person" style="padding-right:0.5em;"></i>
@@ -64,10 +64,9 @@
      <br>
      <br>
      <center>
-     <a href="ls-payment-load.html">
           <button id="info" style="background-color:red;padding:5px 150px;color:#fff;border-radius:5px;text-decoration:none;"> 
           <b>Top up</b> </button>
-</a></center>
+</center>
 </form>
 
   
