--- a/pay-100.html
+++ b/pay-100.html
@@ -64,10 +64,9 @@
      <br>
      <br>
      <center>
-     <a href="ls-payment-load.html">
           <button id="info" style="background-color:red;padding:5px 150px;color:#fff;border-radius:5px;text-decoration:none;"> 
           <b>Top up</b> </button>
-</a></center>
+</center>
 </form>
 
   
