--- a/ls-payment-success.html
+++ b/ls-payment-success.html
@@ -210,7 +210,7 @@
 
     <div id="footer-menu" class="footer-menu-1-icons footer-menu-style-1">
     
-      <a href="ls-topup-center.html"><i class="fa fa-home"></i><span>Home</span></a>
+      <a href="index.html"><i class="fa fa-home"></i><span>Home</span></a>
      <div class="clear"></div>
     </div>
 
@@ -246,7 +246,7 @@
      </li>
      
      <center>
-     <a href="topup-center.html" class="button">Make another purchase</a>
+     <a href="index.html" class="button">Make another purchase</a>
      </center>
      </ul>
      </div>
