--- a/ls-payment-load.html
+++ b/ls-payment-load.html
@@ -9,6 +9,28 @@
   border: 6px solid #f3f3f3;
   border-radius: 50%;
   border-top: 6px solid green;
+  border-bottom: 6px solid red;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.loader1 {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid red;
   border-bottom: 6px solid green;
   width: 30px;
   height: 30px;
@@ -32,7 +54,10 @@
 <center>
 
 <br><br><br><br>
-<div class="loader"></div><br><br>
+<div class="loader"></div>
+<div class="loader1"></div>
+
+<br><br>
 
 
 </center>
