--- a/pay-100.html
+++ b/pay-100.html
@@ -66,12 +66,22 @@
 <br>
 
 
-<button id="link" style="background-color:white"> 
+<button id="link" style="background-color:white;padding:0px 0px"> 
 <div class="list">
         <a class="item item-avatar" href="#">
-          <img src="#">
+          <img src="https://tbsnews.net/sites/default/files/styles/amp_metadata_content_image_min_696px_wide/public/images/2019/07/11/bkash_logo_0.jpg?itok=opRBhQkt">
           <h2>bKash</h2>
-        <p class="subdude">Pay with bKash</p>
+        <p class="subdude">Purchase with bKash</p>
+        </a>
+    </div>
+  </button>
+  
+<button id="link" style="background-color:white;padding:0px 0px"> 
+<div class="list">
+        <a class="item item-avatar" href="#">
+          <img src="https://cashu.b-cdn.net/images/global/externalImages/en/big-logo.png">
+          <h2>CashU</h2>
+        <p class="subdude">Purchase with CashU</p>
         </a>
     </div>
   </button>
