--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="col-lg-4 mb-4 mb-lg-0">
             <h2 class="text-4 mb-3">Garena Freefire Direct Topup</h2>
             
-            <form action="payment-step01.php" method="post">
+            <form action="payment-step01.html" method="post">
               
               <div class="mb-3">
                 <div class="custom-control custom-radio custom-control-inline">
