--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                   </select>
               </div>
               <div class="form-group input-group">
-                <div class="input-group-prepend"> <span class="input-group-text">$</span> </div>
+                <div class="input-group-prepend"> <span class="input-group-text">G</span> </div>
                 <a href="#" data-target="#view-plans" data-toggle="modal" class="view-plans-link"></a>
-                <input class="form-control" name="amount" placeholder="Enter Redeem Code" pattern="^[123456789123]{12}" required type="text">
+                <input class="form-control" name="amount" placeholder="Enter Email" required type="text">
               </div>
               
               <center>
