--- a/payment-success.html
+++ b/payment-success.html
@@ -8,6 +8,7 @@
 
 <title>Leak Studio - Topup</title>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Web Fonts
 ============================================= -->
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900' type='text/css'>
