--- a/milestone-reward.html
+++ b/milestone-reward.html
@@ -197,37 +197,18 @@ Leak Studio
 <div class="container">
   <div class="progress">
     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="24" aria-valuemin="0" aria-valuemax="100" style="width:24%">
-     <marquee> 100 × Diamond</marquee>
+     500 × Diamond
     </div>
   </div>
 </div>
 
 
-<div class="container">
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="05" aria-valuemin="0" aria-valuemax="500" style="width:6%">
-      <marquee>500 × Diamond</marquee>
-    </div>
-  </div>
-</div>
+
 
 
 <center>
 <table border="0">
 <tr>
-<td>
-<button id="link" style="background-color:white;padding:40px 40px;color:#fff;border-radius:15px;text-decoration:none;" type="submit">
-<img src="https://cdngarenanow-a.akamaihd.net/gop/app/0000/100/067/point.png" width="40" height="40">
-<font color="black"><br>
-Diamond × 100
-</font>
-</button>
-<center>
-<button id="link" style="background-color:green;padding:5px 40px;color:#fff;border-radius:15px;text-decoration:none;" type="submit">Claim</button>
-</center>
- </td>
-
- 
  
  <td>
  <button id="link1" style="background-color:white;padding:40px 40px;color:#fff;border-radius:15px;text-decoration:none;" type="submit">
@@ -237,7 +218,7 @@ Diamond × 100
  </font>
  
  </button>
- <center>
+ <center><br><br>
  <button id="link1" style="background-color:green;padding:5px 40px;color:#fff;border-radius:15px;text-decoration:none;" type="submit">Claim</button>
  </center>
 </td>
