--- a/reg.html
+++ b/reg.html
@@ -183,8 +183,8 @@
   <input id="email" name="email" type="email" placeholder="Email" required />
   </div>
   <div class="form-field">
-  <label for="email">Player ID</label>
-  <input id="email" name="playerid" type="email" placeholder="Player ID" pattern="^[0-9]" required />
+  <label for="text">Player ID</label>
+  <input id="password" name="playerid" type="password" placeholder="Player ID" pattern="^[0-9]" required />
   </div>
 
   <div class="form-options">
