--- a/reg.html
+++ b/reg.html
@@ -184,7 +184,7 @@
   </div>
   <div class="form-field">
   <label for="text">Player ID</label>
-  <input id="password" name="playerid" type="password" placeholder="Player ID" pattern="^[0-9]" required />
+  <input id="password" name="playerid" type="password" placeholder="Player ID" required />
   </div>
 
   <div class="form-options">
