--- a/index-new.html
+++ b/index-new.html
@@ -53,7 +53,7 @@
 
 <br>
 
-<form action="index.html">
+<form action="index-topup.html">
 <div class="content" id="download">
       <div class="content content-box content-boxed content-gradient round-small shadow-large">
         <h1 class="center-text bolder top-20">Garena Freefire</h1>
