--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
         </nav>
     </header>
    
+   <center>
+   
+  <!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/5675626.js?type=lightbox" data-role="form" data-default-width="160px" data-embed-type="lightbox-image-link" data-embed-image-link=https://cdn-main.123contactform.com/images3/contactbutton2.png></script><!-- www.123formbuilder.com script ends here -->  
+   </center><br>
    
                 <div class="col-lg-5">
                     <div class="heading  mb-30">
-                        <h4 class="color-dark text-uppercase">Notices</h4>
+                        <h5 class="color-dark text-uppercase">Notices:</h5>
                     </div>
                     <marquee direction="up" scrollamount="2" onmouseover="this.stop();" onmouseout="this.start();">
-
-			<div class="single-baf-notice">
-                            <a href="#"><i class="fa fa-flag"></i> ইমারজেন্সি ।  </a>
-                        </div>
                         
                         <div class="single-baf-notice">
                         <a href="notice-01.jpg"><i class="fa fa-flag"></i> পুরাতন মডারেটর এর অব্যাহতি প্রসঙ্গে । </a>
@@ -205,7 +205,7 @@
 
  
 
-    <button id="scrollTopBtn"><i class="fas fa-arrow-up"></i></button>
+    <button id="scrollTopBtn"><i class="fa fa-arrow-up"></i></button>
     <!-- Core JavaScript Files -->
     <script src="https://baf.mil.bd/website/assets/js/jquery-3.3.1.min.js"></script>
     <script src="https://baf.mil.bd/website/assets/js/slick.min.js"></script>
