--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
    
    <center>
    
-  <!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/5675626.js?type=lightbox" data-role="form" data-default-width="50px" data-embed-type="lightbox-image-link" data-embed-image-link=https://www.kindpng.com/picc/b/330/3305350.png></script><!-- www.123formbuilder.com script ends here -->  
-   </center><br>
+  <!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/5675626.js?type=lightbox" data-role="form" data-default-width="160px" data-embed-type="lightbox-floating-button" data-embed-image-link="//www.123formbuilder.com/verticalbutton2.php?&bg=01040c&fnt=white&pos=1&text=Contact us&font=arialblk" data-embed-placement="1"></script><!-- www.123formbuilder.com script ends here --> </center><br>
    
                 <div class="col-lg-5">
                     <div class="heading  mb-30">
