--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
    <center>
    
 <!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/5675626.js?type=lightbox" data-role="form" data-default-width="160px" data-embed-type="lightbox-text-link" data-embed-text-link="Apply Now!"></script><!-- www.123formbuilder.com script ends here -->   
+                </center>
                 <div class="col-lg-5">
                     <div class="heading  mb-30">
                         <h5 class="color-dark text-uppercase">Notices:</h5>
