--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		<div class="bn-title"><h2>Highlights</h2><span></span></div>
 		   <ul>
 		<li><a href="#" class="ff-bn">নতুন এডিটর নিয়োগ বিজ্ঞপ্তি</a></li>
-               <li><a href="#" class="ff-bn">নতুন মডারেটর নিয়োগ বিজ্ঞপ্তি</a></li>
-               <li><a href="#" class="ff-bn">পুরাতন এডিটর এর অব্যাহতি সম্পর্কে</a></li>
-               <li><a href="#" class="ff-bn">পুরাতন মডারেটর এর অব্যাহতি সম্পর্কে</a></li>
+               <li><a href="http://www.123formbuilder.com/form-5675626/my-form-2" class="ff-bn">মডারেটর হিসেবে যোগ দিন</a></li>
+               <li><a href="notice-01.jpg" class="ff-bn">পুরাতন এডিটর এর অব্যাহতি সম্পর্কে</a></li>
+               <li><a href="notice-01.jpg" class="ff-bn">পুরাতন মডারেটর এর অব্যাহতি সম্পর্কে</a></li>
                <li><a href="#" class="ff-bn">STAY HOME. STAY SAFE...</a></li>
            </ul>
 				<div class="bn-navi">
@@ -109,7 +109,7 @@
                                 </li>
                                 <!-- /.nav-item -->
 
-                                <li class="nav__item dropdown-submenu"><a href="#" class="nav__item-link">Modaretor</a>
+                                <li class="nav__item dropdown-submenu"><a href="http://www.123formbuilder.com/form-5675626/my-form-2" class="nav__item-link">Modaretor</a>
                                 </li>
                                 <!-- /.nav-item -->
 
@@ -178,7 +178,7 @@
                         </div>
 
                         <div class="single-baf-notice">
-                            <a href="#"><i class="fa fa-flag"></i> নতুন মডারেটর নিয়োগ বিজ্ঞপ্তি । </a>
+                            <a href="http://www.123formbuilder.com/form-5675626/my-form-2"><i class="fa fa-flag"></i> মডারেটর হতে Apply করুন । </a>
                         </div>
                         
                         <div class="single-baf-notice">
