--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="https://baf.mil.bd/website/assets/css/style.css">
 
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="notice.html">
+                <a class="navbar-brand" href="index.html">
                     <img src="ls-mil1.jpg" class="logo-light" alt="logo">
                     <img src="ls-mil1.jpg" class="logo-dark" alt="logo">
                 </a>
@@ -162,10 +162,11 @@
    <center>
    
 <!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/5675626.js?type=lightbox" data-role="form" data-default-width="160px" data-embed-type="lightbox-text-link" data-embed-text-link="Apply Now!"></script><!-- www.123formbuilder.com script ends here -->   
-                </center>
+                </center><br><br>
+                
                 <div class="col-lg-5">
                     <div class="heading  mb-30">
-                        <h5 class="color-dark text-uppercase">Notices:</h5>
+                        <h6 class="color-dark text-uppercase">Notices:</h6>
                     </div>
                     <marquee direction="up" scrollamount="2" onmouseover="this.stop();" onmouseout="this.start();">
                         
@@ -200,8 +201,13 @@
             </div>
         </div>
     </div>
+  
+<br><br>
 
-
+<center>
+2020 © Leak Studio Bangladesh
+</center>
+<br><br>
  
 
     <button id="scrollTopBtn"><i class="fa fa-arrow-up"></i></button>
