--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <!-- profile box -->
                     <div class="profileBox">
                         <div class="image-wrapper">
-                            <img src="https://mobilekit.bragherstudio.com/view7/assets/img/sample/avatar/avatar1.jpg" alt="image" class="imaged rounded">
+                            <img src="ls-logo.png" alt="image" class="imaged rounded">
                         </div>
                         <div class="in">
                             <strong>Leak Studio</strong>
