--- a/noti.html
+++ b/noti.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -26,7 +25,7 @@
     <!-- App Header -->
     <div class="appHeader bg-primary text-light">
         <div class="left">
-            <a href="#" class="headerButton">
+            <a href="index.html" class="headerButton">
                 <ion-icon name="chevron-back-outline"></ion-icon>
             </a>
         </div>
