--- a/tour.html
+++ b/tour.html
@@ -22,41 +22,19 @@
         <div class="spinner-border text-primary" role="status"></div>
     </div>
     <!-- * loader -->
-
-    <!-- App Header -->
-    <div class="appHeader bg-primary scrolled">
-        <div class="left">
-            <a href="#" class="headerButton" data-toggle="modal" data-target="#sidebarPanel">
-                <ion-icon name="menu-outline"></ion-icon>
-            </a>
-        </div>
-        <div class="pageTitle">
-            Leak Studio
-        </div>
-        <div class="right">
-            <a href="javascript:;" class="headerButton toggle-searchbox">
-                <ion-icon name="search-outline"></ion-icon>
-            </a>
-        </div>
-    </div>
-    <!-- * App Header -->
-
-    <!-- Search Component -->
-    <div id="search" class="appHeader">
-        <form class="search-form">
-            <div class="form-group searchbox">
-                <input type="text" class="form-control" placeholder="Search...">
-                <i class="input-icon">
-                    <ion-icon name="search-outline"></ion-icon>
-                </i>
-                <a href="javascript:;" class="ml-1 close toggle-searchbox">
-                    <ion-icon name="close-circle"></ion-icon>
-                </a>
-            </div>
-        </form>
-    </div>
-    <!-- * Search Component -->
-
+    
+    
+<!-- App Header -->
+ <div class="appHeader no-border">
+     <div class="left">
+         <a href="index.html" class="headerButton">
+             <ion-icon name="chevron-back-outline"></ion-icon>
+         </a>
+     </div>
+     <div class="pageTitle">Leak Studio</div>
+   
+ </div>
+ <!-- * App Header -->
 
 
 
@@ -218,7 +196,7 @@
         </a>
         <a href="#" class="item">
             <div class="col">
-                <ion-icon name="layers-outline"></ion-icon>
+                <ion-icon name="arrow-down-outline"></ion-icon>
             </div>
         </a>
         <a href="javascript:;" class="item" data-toggle="modal" data-target="#sidebarPanel">
