--- a/partner.html
+++ b/partner.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Leak Studio - Partnerhip Programme</title>
+    <title>Leak Studio - Partnership Programme</title>
     <link rel="stylesheet" href="https://mobilekit.bragherstudio.com/view7/assets/css/style.css">
     <link rel="manifest" href="https://mobilekit.bragherstudio.com/view7/__manifest.json">
 
