--- a/partner.html
+++ b/partner.html
@@ -67,21 +67,25 @@
    </div>
    </div>
    
+   
+   
+   
    <div class="carousel-button-footer">
    <div class="row">
   
    <div class="col-12" onclick="toastbox('toast-11')">
-   <a href="#" class="btn btn-primary btn-lg btn-block">Join Now!</a>
+   <a href="https://form.jotform.com/203088090467458" class="btn btn-primary btn-lg btn-block">Join Now!</a>
    </div>
    <!-- toast center iconed -->
    <div id="toast-11" class="toast-box toast-center">
    <div class="in">
    <ion-icon name="checkmark-outline" class="text-success"></ion-icon>
    <div class="text">
-   The server will be ready soon!
+   
+   redirecting...
    </div>
    </div>
-   <button type="button" class="btn btn-sm btn-text-light close-button">Close</button>
+   <button type="button" class="btn btn-sm btn-text-light close-button">please wait</button>
    </div>
    <!-- toast center iconed -->
    
@@ -91,8 +95,11 @@
    </div>
    
    
+   
    </div>
    <!-- * App Capsule -->
+   
+   
    
    
    
