--- a/hbd-reward.html
+++ b/hbd-reward.html
@@ -50,7 +50,7 @@
             <div class="pageTitle">Leak Studio</div>
             <div class="right">
             <a href="#" class="headerButton">
-            <ion-icon name="help-circle-outline" data-toggle="modal" data-target="#DialogIconedButton" onclick="togglePlay()">🔉</ion-icon>
+            <ion-icon name="" data-toggle="modal" data-target="#DialogIconedButton" onclick="togglePlay()">🔉</ion-icon>
             <div class="player">
             <audio class="audio" src="hbd1.mp3" autoplay type="audio" loop="1"></audio>
             </div>
