--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="modal-body">
     Event Period: 21 January 2021
     <hr>
-  CELEBRATE LEAK STUDIO'S 2ND BIRTHDAY WITH US TO GET DIAMONDS, ALOK, K AND MANY MONE EXCITING PRIZES.
+  CELEBRATE LEAK STUDIO'S 2ND BIRTHDAY WITH US TO GET DIAMONDS, ALOK, K AND MANY MORE EXCITING PRIZES.
     </div>
     <div class="modal-footer">
     <div class="btn-list">
