--- a/hbd-reward.html
+++ b/hbd-reward.html
@@ -278,7 +278,7 @@
    <div class="modal-body">
    Event Period: 21:01:21 - 21:01:21
    <hr>
-   1. There are two categories of prizes: Premium amd Besic.
+   1. There are two categories of prizes: Premium and Besic.
    <br>
  2.  Make a Birhday Wish in the respective category to draw a prize from the entire prize pool within that category (Premium Prizes & Besic Prizes).
   <br>
