--- a/hbd-reward.html
+++ b/hbd-reward.html
@@ -259,7 +259,7 @@
   
   <br>
 
-<a href="ls-hbd-reward.html">
+<a href="#">
   <div class="form-button-group">
   <button type="submit" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#DialogIconedDanger">Anniversary Wish - Free Spin</button>
   </div>
