--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://topup.freefire.pk/app" frameborder="0" height="600" width="340"></i>
+<iframe src="https://topup.freefire.pk/app" frameborder="0"></i>
