--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<iframe src="https://topup.freefire.pk/app" frameborder="0"></i>
+<head>
+<title> Leak Studio Topup Center </title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+   <meta name="viewport"
+       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+ 
+</head>
+<body>
+<iframe src="https://topup.freefire.pk/app" frameborder="0" height="600" width="340"></i>
+
+
+</body>
+</html>
+
