--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
 </head>
 <body>
-<iframe src="https://topup.freefire.pk/app" frameborder="0" height="630" width="345"></i>
+<iframe src="https://shop2game.com/app" frameborder="0" height="630" width="345"></i>
 
 
 </body>
