--- a/reg-tour.html
+++ b/reg-tour.html
@@ -1,18 +1,65 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Refresh" content="05;url=ls-payment-on-way.html">
 <title> LSC Registration </title>
-<meta http-equiv="refresh" content="2">
-</head>
-<body onload="myFunction()">
-
-<script>
-function myFunction() {
-  alert("The server will be ready soon!");
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.loader {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid green;
+  border-bottom: 6px solid red;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 1s linear infinite;
 }
-</script>
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
+.loader1 {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid red;
+  border-bottom: 6px solid green;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
+</head>
+<body>
+<br><br><br><br><br><br><br>
+<center>
+
+<br><br><br><br>
+<div class="loader"></div>
+<div class="loader1"></div>
+
+<br><br>
 
 
+</center>
 </body>
 </html>
