--- a/ls-payment-success.html
+++ b/ls-payment-success.html
@@ -242,11 +242,11 @@
      
      <li><strong>Your purchase confirmed!</strong> </li>
      <li>
-     Diamonds will be added in your Account within 30 min. 
+    <b> 520 </b> Diamond will be added in your Account shortly. 
      </li>
      
      <center>
-     <a href="index.html" class="button">Make another purchase</a>
+     <a href="#" class="button">Make another purchase</a>
      </center>
      </ul>
      </div>
