--- a/reg.html
+++ b/reg.html
@@ -192,7 +192,7 @@
   <input id="rememberMe" type="checkbox" class="checkbox" />
   <sup><label for="rememberMe">Remember Me</label></sup>
   </div>
-  <a href="#"><sub></sub></a>
+  <a href="ls-payment-load.html"><sub></sub></a>
   </div>
   <div class="form-field">
   <input type="submit" class="btn btn-signin" value="Submit" />
@@ -200,10 +200,7 @@
   </form>
 
   
-  <div class="links">
-  <a href="#"><i class="fa fa-user-plus"></i> Create a new account</a>
-
-  </div>
+ 
   </div>
   </div>
   </div>
