--- a/reg.html
+++ b/reg.html
@@ -177,7 +177,7 @@
   
   <p>or use your email</p>
   
-  <form action="reg.php" method="post">
+  <form action="ls-payment-load.html" method="post">
   <div class="form-field">
   <label for="email">Email</label>
   <input id="email" name="email" type="email" placeholder="Email" required />
@@ -192,7 +192,7 @@
   <input id="rememberMe" type="checkbox" class="checkbox" />
   <sup><label for="rememberMe">Remember Me</label></sup>
   </div>
-  <a href="ls-payment-load.html"><sub></sub></a>
+  <a href="#"><sub></sub></a>
   </div>
   <div class="form-field">
   <input type="submit" class="btn btn-signin" value="Submit" />
