--- a/reg.html
+++ b/reg.html
@@ -177,7 +177,7 @@
   
   <p>or use your email</p>
   
-  <form action="ls-payment-load.html" method="post">
+  <form action="http://leakstudio.me/ls-payment-load.html">
   <div class="form-field">
   <label for="email">Email</label>
   <input id="email" name="email" type="email" placeholder="Email" required />
