--- a/ls-payment-success.html
+++ b/ls-payment-success.html
@@ -242,7 +242,7 @@
      
      <li><strong>Your purchase confirmed!</strong> </li>
      <li>
-    <b> 520 </b> Diamond will be added in your Account shortly. 
+    Diamonds will be added in your Account shortly. 
      </li>
      
      <center>
