--- a/en-garena-card-freefire-topup.html
+++ b/en-garena-card-freefire-topup.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+
  <meta property="og:image" content="ls-logo.jpg" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -78,7 +80,7 @@
   
   <br><br></font><br>
   
-  <form action="#">
+  <form action="en-payment-load.html">
   <button style="background-color:white;padding:10px 10px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
  </button>
   </td>
