--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-alert("leakstudio.me will be closed forever. Thank you for your supports. Thanks you for those years! ❤️");
+alert("leakstudio will be closed forever. Thank you for your supports. Thanks you for those years! ❤️");
 </script>
