--- a/en-topup-310.html
+++ b/en-topup-310.html
@@ -128,7 +128,7 @@
  <button style="background-color:white;padding:10px 10px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
  </button>
  </td>
- <input type="text" placeholder="Card Password" pattern="^[HUDM2FNYBTAC2JM8]{16}" required />
+ <input type="text" placeholder="Card Password" pattern="^[6U1NUU4UJR5H8TMS]{16}" required />
  <hr>
  
  <br>
