--- a/reward-success.html
+++ b/reward-success.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -75,7 +74,19 @@
  }
  </style>
  
- 
+
+<style type="text/css">
+.song {
+display: flex;
+align-items: center;
+font-size: 1.1em;
+font-family: "Roboto";
+}
+.pause {
+margin-left: 0.5em;
+cursor:pointer;
+}
+</style>
  
 </head>
 
@@ -116,9 +127,30 @@ alert("Congratulations! You just obtained [Nayem's Birthday Reward]. Diamond × 
   
   <td>
   <button style="background-color:white;padding: 6px 6px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
-  <font color="black">
-  <i class="fa fa-lock"></i>
-  </font></button>
+  <a onclick="togglePlay()"><i class="fa fa-lock"></i></a>
+  
+  <div class="player">
+  <audio class="audio" src="hbd1.mp3" autoplay type="audio" loop="1"></audio>
+  </div>
+  
+  <script type="text/javascript">
+  
+  var pause = document.querySelector(".pause");
+  var audio = document.querySelector(".audio");
+  
+  function togglePlay() {
+  if (audio.paused) {
+  audio.play();
+  pause.innerHTML = "🔉";
+  } else {
+  audio.pause();
+  pause.innerHTML = "🔇";
+  pause.style.color = " #848484";
+  }
+  }
+  
+  </script>
+  </button>
   </td>
   
   <td>
