--- a/reward.html
+++ b/reward.html
@@ -122,7 +122,7 @@
   <td>
   <button style="background-color:white;padding: 6px 6px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
   
-  <a onclick="togglePlay()"><i class="fa fa-music"></i></a>
+  <a onclick="togglePlay()"><i class="fa fa-lock"></i></a>
   
   <div class="player">
   <audio class="audio" src="hbd.mp3" autoplay type="audio" loop="1"></audio>
