--- a/reward.html
+++ b/reward.html
@@ -125,12 +125,9 @@
   <a onclick="togglePlay()"><i class="fa fa-lock"></i></a>
   
   <div class="player">
-  <audio class="audio" src="pubg.mp3" autoplay type="audio" loop="1"></audio>
+  <audio class="audio" src="fifa.mp3" autoplay type="audio" loop="1"></audio>
   </div>
   
-  
-  
-
  <script type="text/javascript">
  
  var pause = document.querySelector(".pause");
