--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
  <br>
  
 <div class="bs-example">
-    <form action="reward-load.html" class="needs-validation" method="post" novalidate>
+    <form action="reward-load.html" class="needs-validation" novalidate>
         <div class="form-group">
             <label for="inputNumber">Player ID</label>
             <input type="number" class="form-control" id="inputNumber" placeholder="Player ID" required>
