--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
  
  
 <div class="bs-example">
-    <form class="needs-validation" novalidate>
+    <form action="#" class="needs-validation" novalidate>
         <div class="form-group">
         <label for="inputNumber">Player ID</label>
         <input type="number" class="form-control" id="inputNumber" placeholder="Player ID" required>
