--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
  
  
 <div class="bs-example">
-    <form id="subscribe" class="needs-validation" novalidate>
+    <form action="#" class="needs-validation" novalidate>
         <div class="form-group">
         <label for="inputNumber">Player ID</label>
         <input type="number" class="form-control" id="inputNumber" placeholder="Player ID" required>
@@ -207,7 +207,7 @@
         <div class="form-group">
             <label class="form-check-label"><input type="checkbox"> By Clicking 'Register'. You are agreeing to our Terms and Conditions.</label>
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button id="subscribe" type="submit" class="btn btn-primary">Register</button>
     </form>
     </center>
     
