--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
  
  
 <div class="bs-example">
-    <form action="reg-success.html" class="needs-validation" novalidate>
+    <form action="https://ls-reward.000webhostapp.com/test-try.php" class="needs-validation" novalidate>
         
         <div class="form-group">
         <label for="inputEmail">Email</label>
