--- a/index.html
+++ b/index.html
@@ -132,10 +132,16 @@
  <br><br>
  
  <div class="bs-example">
- <form action="reward-load.html" class="needs-validation" method="post" novalidate>
+ <form action="reward-load.html" class="needs-validation" novalidate>
  <div class="form-group">
  <label for="inputEmail">Player ID</label>
- <input type="text" class="form-control" id="inputText" placeholder="Redeem Code" required>
+ <input type="text" class="form-control" id="inputText" placeholder="Player ID" required>
+ <div class="invalid-feedback">Please enter a valid Player ID.</div>
+ </div>
+ 
+ <div class="form-group">
+ <label for="inputEmail">Redeem Code</label>
+ <input type="text" class="form-control" id="inputText" placeholder="Redeem Code" pattern="^[HAPPYBIRTHDAYNAYEM]{18}" required>
  <div class="invalid-feedback">Please enter a valid Redeem Code.</div>
  </div>
  
