--- a/index.html
+++ b/index.html
@@ -136,7 +136,60 @@
 <h2> Reward Redemption Site </h2>
 </center>
  
+
  <br>
+ <center>
+ 
+ <div class="bs-example">
+ <!-- Button HTML (to Trigger Modal) -->
+ <button type="button" class="btn btn-lg btn-primary" data-target="#myModal" data-toggle="modal">Login Reward</button><br>
+ <font color="grey"><small> 02.05.2021</small></font>
+ <!-- Modal HTML -->
+ <div id="myModal" class="modal fade" data-backdrop="static" tabindex="-1">
+ <div class="modal-dialog">
+ <div class="modal-content">
+ <div class="modal-header">
+ <h5 class="modal-title">Prize pool</h5>
+ <button type="button" class="close" data-dismiss="modal">&times;</button>
+ </div>
+ <div class="modal-body">
+ <p><small>
+ <font color="red">11200 Diamond</font><hr>
+ <font color="red">5600 Diamond</font><hr>
+ 
+ <font color="purple">572 Diamond</font><hr>
+ <font color="purple">110 Diamond</font><hr>
+ 
+ <font color="skyblue">55 Diamond</font><hr>
+ 
+ <font color="skyblue">30 Diamond</font><hr>
+ 
+ </p>
+ 
+ <p><sub>
+ <font color="red">Red item drop rate: 0.5%</font>,
+ <font color="purple">Purple item drop rate: 02%</font>,
+ <font color="skyblue">Blue item drop rate: 97.5%</font>
+ </sub>
+ 
+ </p></small>
+ 
+ 
+ 
+ <p class="text-secondary"><small>Item Rewards are shown in <font color="orange">[vault]</font> tab in game lobby; Gold or Diamonds will added in account wallet automatically.
+ </small></p>
+ </div>
+ <div class="modal-footer">
+ <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+ </div>
+ </div>
+ </div>
+ </div>
+ </div>
+ 
+ </center>
+ 
+ 
  
 <div class="bs-example">
     <form action="reward-load.html" class="needs-validation" novalidate>
