--- a/reward-success.html
+++ b/reward-success.html
@@ -271,7 +271,7 @@ Item Rewards are shown in <font color="orange">[vault]</font> tab in game lobby;
   <li>
   <sub>ITEM</sub>
   <br>
-  Diamond × 50
+  Diamond × 50 + Bonus 05
   </li>
   
   
