--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
@@ -32,7 +33,7 @@
 
   <header class="header">
   <div class="logo">
-    <a title="Home" href="leakstudio.me">
+    <a title="Home" href="http://leakstudio.me">
       <img src="lslogo.png" alt="Leak Studio Free Fire Help Center home page">
     </a>
   </div>
