--- a/game-concerns.html
+++ b/game-concerns.html
@@ -32,14 +32,14 @@
 
   <header class="header">
   <div class="logo">
-    <a title="Home" href="leakstudio.me">
+    <a title="Home" href="http://leakstudio.me">
       <img src="lslogo.png" alt="Leak Studio Free Fire Help Center home page">
     </a>
   </div>
   <div class="nav-wrapper">
     	<form role="search" class="search"><input name="utf8" type="hidden" value="&#x2713;" /><input type="search" name="query" id="query" placeholder="Search" aria-label="Search" /></form>
       
-     <a class="submit-a-request"  href="leakstudio.me" >Go to Home</a>
+     <a class="submit-a-request"  href="http://leakstudio.me" >Go to Home</a>
   </div>
 </header>
 
