--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           
             <li class="blocks-item" >
               <div class="character"></div>
-              <a href="https://form.jotform.com/211355165855054" class="blocks-item-link">
+              <a href="en-payment.html" class="blocks-item-link">
                 <div class="blocks-item-title">LS Payment Issue</div>
               </a>
             </li>
