--- a/game-concerns.html
+++ b/game-concerns.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <!-- v19652 -->
 
-  <title>Leak Studio</title>
+  <title>Leak Studio - Tour Info </title>
 
   <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="hc:meta:server:MqZbNr-N3_v_oZ_66qZ1YmzFOTfhoxnU5mVa3sKbKkia6DuowQpzdbEEhM3YDeUfZFgjb-lCt5bP5i9bCTBktA" />
@@ -42,17 +42,74 @@
      <a class="submit-a-request"  href="http://leakstudio.me" >Go to Home</a>
   </div>
 </header>
-
+<center>
+<img src="reg.jpg" width="360" height="50">
 
   <main role="main">
-<br><br><br><br>
-<center>
-The server will be ready soon!
-   </center>
+  <font size="01">
+
+We are proud to bring the Leak Studio Free Fire Championship. This is a first-of-its-kind unique event where we will have teams from different cities coming forward to showcase their skills and win it all. While the tournament format and other details are something that we will be discussing soon, let’s explain how you can be a part of this event. 
+</font>
+   <br><br></center>
+   
+   <font color="red" size="2">
+ <strong> Eligibility/ যোগ্যতা: </strong></font>
+   <br><font size="1">
+   
+   <ol style="list-style-type:disc">
+   
+   <li> LSFC তে অংশগ্রহণ করতে অবশ্যই সনদপত্র অনুযায়ী সর্বনিম্ন বয়স ১২ বছর হতে হবে।
+   <br></li>
+   <li> প্লেয়ার লেভেলে ৪০+, সর্বনিম্ন Rank Diamond 1+ ও সর্বনিম্ন স্কোর ২৩৫৮ হতে হবে।
+   <br></li>
+   <li> LSFC তো রেজিষ্ট্রেশন করার মাধ্যমে আপনি সকল শর্ত সমূহ মেনে নিবেন ও LS Official এর সিদ্ধান্তের প্রতি অনুগত
+   থাকবেন।
+   </li>
+   </font>
+   
+   </ol>
+   
+   
+   <br>
+   
+   <font color="red" size="2">
+   <strong> Format and Schedule: </strong></font>
+   <br><font size="1"></center>
+   
+   <ol style="list-style-type:disc">
+   
+   <li>
+   LSFC দুই ধাপে অনুষ্ঠিত হবে। ১ম ধাপে রেজিষ্ট্রেশনকৃত 
+   সকল টিমের মধ্যে একটি গ্রুপ ভিত্তিক Qualification Match হবে। 
+   <br></li>
+   <li>
+   
+   প্রত্যেক গ্রুপের 1st, 2nd এবং 3rd Team সরাসরি ফাইনাল খেলার সুযোগ লাভ করবে।
+   <br></li>
+   <li>
+   LSFC এর Qualifiers ম্যাচ <font color="purple">
+  ১০ জুন </font> বিকালে ও Final <font color="green">
+  ১১ জুন </font> বিকালে অনুষ্ঠিত হবে।
+   <br></li>
+   <li>
+   
+  FFBC এর পয়েন্ট টেবিল অনুযায়ী টুর্নামেন্টে পয়েন্ট গননা করা হবে।
+   <br></li>
+   
+ <br><br> <b>
+ <center>
+ সম্পূর্ণ তথ্য অতি শীঘ্রই প্রকাশ করা হবে।
+ </center></b>
+ 
+   </font>
+   
+   </ol>
+   
+   
+   
    
    
       </main>
-  
 
 </body>
 </html>
