--- a/en-ff-leakstudio-tour.html
+++ b/en-ff-leakstudio-tour.html
@@ -54,7 +54,7 @@
 
   <center><br><br><br><br><br><br><br><br>
   
-<img href="en-ff-leakstudio-tour" src="error.png" height="200" width="330">
+<img href="en-ff-leakstudio-tour" src="error3.png" height="200" width="330">
 
 </center>
   </div>
