--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="nav-wrapper">
     	<form role="search" class="search"><input name="utf8" type="hidden" value="&#x2713;" /><input type="search" name="query" id="query" placeholder="Search" aria-label="Search" /></form>
       
-     <a class="submit-a-request"  href="partner.html"><font size="01">Partner Program Registration</font></a>
+     <a class="submit-a-request"  href="en-ff-leakstudio-tour.html">TOUR REGISTRATION</a>
   </div>
 </header>
 
