--- a/reward-success.html
+++ b/reward-success.html
@@ -271,22 +271,10 @@ Item Rewards are shown in <font color="orange">[vault]</font> tab in game lobby;
   <li>
   <sub>ITEM</sub>
   <br>
-  Diamond × 50 + Bonus 05
+  Diamond × 25
   </li>
   
   
-  <li>
-  <sub>VAT RATE</sub>
-  <br>
-  18.0%
-  </li>
-  
-  
-  <li>
-  <sub>TOTAL PAID</sub>
-  <br>
-  <del> ₹40</del> ₹00 (No Charge)
-  </li>
   
   </ul>
   </div>
@@ -299,15 +287,14 @@ Item Rewards are shown in <font color="orange">[vault]</font> tab in game lobby;
   <br><br>
    <sup>
    <b>
-   CODA PAYMENTS INDIA PRIVATE LIMITED (SGTIN: 33AAHCC6828J1JH, HSN: 998436)
-   <br></b>
-   New no19, Playground view street, Nandhanam Extension,
-   
-   Nandhanam,
-   <br>
- CHENNAI, Chennai, Tamil Nadu, India, 600035
-   
-   
+   LEAK STUDIO PRIVATE LIMITED (SGTIN: 33AAHCC6828J1JH, HSN: 998436)
+    <br></b>
+    Road no2, Playground street, Gazipur,
+    
+    Dhaka,
+    <br>
+    BOF, Gazipur, Dhaka, Bangladesh
+    
 
    </sup>
   
