--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
@@ -137,9 +138,9 @@ body {
 <div id="myModal" class="modal fade">
   <div class="modal-dialog">
 
-  <center><br><br><br><br><br><br>
+  <center><br><br><br><br><br>
   
-<img src="als1.jpg" height="280" width="330">
+<img src="als6.png" height="380" width="300">
 
 </center>
   </div>
